Implement Default Terminal (#7489)
- Implements the default application behavior and handoff mechanisms
  between console and terminal. The inbox portion is done already. This
  adds the ability for our OpenConsole.exe to accept the incoming server
  connection from the Windows OS, stand up a PTY session, start the
  Windows Terminal as a listener for an incoming connection, and then
  send it the incoming PTY connection for it to launch a tab.
- The tab is launched with default settings at the moment.
- You must configure the default application using the `conhost.exe`
  propsheet or with the registry keys. Finishing the setting inside
  Windows Terminal will be a todo after this is complete. The OS
  Settings panel work to surface this setting is a dependency delivered
  by another team and you will not see it here.

## Validation Steps Performed
- [x] Manual adjust of registry keys to the delegation conhost/terminal
  behavior
- [x] Adjustment of the delegation options with the propsheet
- [x] Launching things from the run box manually and watching them show
  in Terminal
- [x] Launching things from shortcuts and watching them show in the
  Terminal   

Documentation on how it works will be a TODO post completion in #9462

References #7414 - Default Terminal spec

Closes #492

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,7 +16,9 @@
               "${workspaceFolder}\\OpenConsole.sln",
               "/p:Configuration=${input:configChoice}",
               "/p:Platform=${input:platformChoice}",
+              "/p:AppxSymbolPackageEnabled=false", // This takes a long time, so false if we don't really need it.
               "/t:$target",
+              "/m", // Parallel builds
               "/verbosity:minimal"
             ],
             "problemMatcher": ["$msCompile"],
@@ -46,8 +48,7 @@
             ],
             "problemMatcher": ["$msCompile"],
             "group": {
-              "kind": "build",
-              "isDefault": true
+              "kind": "build"
             }
         },
         {
@@ -55,6 +56,18 @@
             "label": "Run Windows Terminal Dev",
             "command": "wtd.exe",
             "args": [
+            ],
+            "problemMatcher": ["$msCompile"],
+        },
+        {
+            "type": "process",
+            "label": "Run Code Format",
+            "command": "powershell.exe",
+            "args": [
+              "-Command",
+              "Import-Module ${workspaceFolder}\\tools\\OpenConsole.psm1;",
+              "Set-MsBuildDevEnvironment;",
+              "Invoke-CodeFormat",
             ],
             "problemMatcher": ["$msCompile"],
         }
