--- a/src/host/exe/Host.EXE.vcxproj
+++ b/src/host/exe/Host.EXE.vcxproj
@@ -8,9 +8,10 @@
     <TargetName>OpenConsole</TargetName>
     <ConfigurationType>Application</ConfigurationType>
   </PropertyGroup>
-  <Import Project="..\..\common.build.pre.props" />
+  <Import Project="$(SolutionDir)src\common.build.pre.props" />
   <ItemGroup>
     <ClInclude Include="..\precomp.h" />
+    <ClInclude Include="CConsoleHandoff.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
@@ -18,7 +19,8 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
-    <ClCompile Include="..\exemain.cpp" />
+    <ClCompile Include="CConsoleHandoff.cpp" />
+    <ClCompile Include="exemain.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\buffer\out\lib\bufferout.vcxproj">
@@ -80,7 +82,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>..;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..;$(IntDir)..\OpenConsoleProxy;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AllowIsolation>true</AllowIsolation>
