Fix compilation with VS16.10 and later (#10208)
## Summary of the Pull Request

VS16.10 and later contain two regressions:
* Marking the use of `pshpack*.h` in system headers with C4103
* The newly included, builtin `AssemblyReference.xaml` is missing the `AssemblyReferences` project capability

## PR Checklist
* [x] I work here

## Validation Steps Performed

Built the project with VS16.10 and VS17.0.

--- a/src/common.build.pre.props
+++ b/src/common.build.pre.props
@@ -96,8 +96,17 @@
       <TreatSpecificWarningsAsErrors>4189;4100;4242;4389;4244</TreatSpecificWarningsAsErrors>
       <!--<WarningLevel>EnableAllWarnings</WarningLevel>-->
       <TreatWarningAsError>true</TreatWarningAsError>
-      <!-- disable warning on nameless structs (4201) -->
-      <DisableSpecificWarnings>4201;4312;4467;%(DisableSpecificWarnings)</DisableSpecificWarnings>
+      <!--
+        C4103: alignment changed after including header, may be due to missing #pragma pack(pop)
+          Caused by a regression in VS 16.10, it detects the use of /pshpack[1248].h/ in system headers.
+        C4201: nonstandard extension used: nameless struct/union
+          Conhost code uses a lot of nameless structs/unions.
+        C4312: 'type cast': conversion from 'A' to 'B' of greater size
+          Conhost code converts DWORDs to HANDLEs for instance.
+        C4467: usage of ATL attributes is deprecated
+          Conhost code still uses ATL.
+      -->
+      <DisableSpecificWarnings>4103;4201;4312;4467;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <PreprocessorDefinitions>_WINDOWS;EXTERNAL_BUILD;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <PrecompiledHeaderFile>precomp.h</PrecompiledHeaderFile>
