--- a/src/renderer/dx/lib/dx.vcxproj.filters
+++ b/src/renderer/dx/lib/dx.vcxproj.filters
@@ -4,22 +4,24 @@
     <Natvis Include="$(SolutionDir)tools\ConsoleTypes.natvis" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\BoxDrawingEffect.cpp" />
     <ClCompile Include="..\CustomTextLayout.cpp" />
     <ClCompile Include="..\CustomTextRenderer.cpp" />
-    <ClCompile Include="..\precomp.cpp" />
+    <ClCompile Include="..\DxFontInfo.cpp" />
     <ClCompile Include="..\DxFontRenderData.cpp" />
     <ClCompile Include="..\DxRenderer.cpp" />
-    <ClCompile Include="..\BoxDrawingEffect.cpp" />
+    <ClCompile Include="..\precomp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\BoxDrawingEffect.h" />
     <ClInclude Include="..\CustomTextLayout.h" />
     <ClInclude Include="..\CustomTextRenderer.h" />
-    <ClInclude Include="..\precomp.h" />
-    <ClInclude Include="..\DxFontRenderData.h"/>
+    <ClInclude Include="..\DxFontInfo.h" />
+    <ClInclude Include="..\DxFontRenderData.h" />
     <ClInclude Include="..\DxRenderer.hpp" />
+    <ClInclude Include="..\precomp.h" />
     <ClInclude Include="..\ScreenPixelShader.h" />
     <ClInclude Include="..\ScreenVertexShader.h" />
-    <ClInclude Include="..\BoxDrawingEffect.h" />
   </ItemGroup>
   <ItemGroup>
     <Midl Include="..\IBoxDrawingEffect.idl" />
